# LinkKo

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  main.py  pyproject.toml
src/: app.py  database.py
src/core/: conf.py
