[project]
name = "linkko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.1",
    "fastapi>=0.124.4",
    "greenlet>=3.1.1",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.33.0",
]
